<?xml version="1.0"?>
<package format="3">
  <name>teleop</name>
  <version>0.0.1</version>
  <description>
    This package contains necessary nodes for teleoperation of the robot. 
  </description>
  <maintainer email="tommy.bouchard-lebrun.1@ulaval.ca">Tommy Bouchard Lebrun</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>